[gd_scene load_steps=6 format=3 uid="uid://h76gr0mnfl7c"]

[ext_resource type="Script" path="res://scenes/ui/title_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c4lvb7orcowdb" path="res://resources/art/title_cathedral_photo.jpg" id="2"]
[ext_resource type="PackedScene" path="res://scenes/ui/settings_menu.tscn" id="3"]
[ext_resource type="Theme" uid="uid://d1bhwd8v505pu" path="res://resources/ui_themes/main_menu.tres" id="4"]

[sub_resource type="CanvasItemMaterial" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4")
script = ExtResource("1")

[node name="TitleImage" type="TextureRect" parent="."]
material = SubResource("1")
custom_minimum_size = Vector2(1024, 768)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 7

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 0.051
anchor_right = 0.26
anchor_bottom = 0.125
offset_top = -0.0800018
offset_right = 0.799957
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameName" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4")
theme_override_colors/font_shadow_color = Color(0.760784, 0.364706, 0.0470588, 1)
theme_override_colors/font_outline_color = Color(0.760784, 0.364706, 0.0470588, 1)
text = "SECRET HISTORIES"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -297.0
offset_top = -175.0
offset_right = 5.0
offset_bottom = 176.0
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("4")
theme_override_colors/font_hover_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_focus_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_colors/font_disabled_color = Color(0.509804, 0.509804, 0.509804, 1)
disabled = true
text = "Continue"
flat = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
text = "Commence"
flat = true

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
text = "Configure"
flat = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
text = "Credits"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueButton")
theme = ExtResource("4")
text = "Conclude"
flat = true

[node name="Menus" type="Node" parent="."]

[node name="SettingsMenu" parent="Menus" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
anchors_preset = -1
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
